--- a/CSS/style.css
+++ b/CSS/style.css
@@ -94,7 +94,7 @@ header {
   text-decoration: none;
   color: #3d2113;
   font-size: 4.5vw;
-  font-family: "Brown Sugar", cursive, sans-serif;
+  font-family: "Brown Sugar", sans-serif;
 }
 
 .primary-nav {
@@ -151,11 +151,11 @@ p {
 
 h1 {
   font-size: 70px;
-  font-family: "Brown Sugar", cursive, sans-serif;
+  font-family: "Brown Sugar", sans-serif;
 }
 
 .special-font {
-  font-family: "Brown Sugar", cursive, sans-serif;
+  font-family: "Brown Sugar", sans-serif;
   font-size: 2.5vw;
   color: #3d2113;
 }
@@ -241,7 +241,7 @@ h1 {
   font-size: 2.2vw
 }
 .titlespan {
-  font-family: "Brown Sugar", cursive, sans-serif;
+  font-family: "Brown Sugar", sans-serif;
   font-size: 12vw;
   color: #3d2113;
   text-align: center
@@ -281,7 +281,7 @@ h1 {
   line-height: 1.3;
 }
 .subtitle span {
-  font-family: "brown sugar", cursive, sans-serif;
+  font-family: "Brown Sugar", sans-serif;
   display: block;
   margin-top: 0.2vw;
   font-size: clamp(1.8rem, 3.5vw, 3.8rem);
@@ -358,7 +358,7 @@ position: absolute;
 }
 
 .header-font {
-  font-family: "Brown Sugar", cursive, sans-serif;
+  font-family: "Brown Sugar", sans-serif;
   font-size: 6rem;
   letter-spacing: 2px;
   position: relative;
