--- a/CSS/style.css
+++ b/CSS/style.css
@@ -268,7 +268,7 @@ h1 {
   font-size: clamp(3rem, 10vw, 14rem);
   letter-spacing: 0.4vw;
   color: rgba(202, 173, 137, 14);
-  font-family: "brown sugar", cursive, sans-serif;
+  font-family: "Brown Sugar", sans-serif;
 }
 
 .subtitle {
